cmake_minimum_required(VERSION 3.10)

project(aoc)

set(CMAKE_CXX_STANDARD 20)

add_executable(day01-01 day01/01.cpp)
add_executable(day01-02 day01/02.cpp)

add_executable(day02-01 day02/01.cpp)
add_executable(day02-02 day02/02.cpp)

add_executable(day06-01 day06/01.cpp)
add_executable(day06-02 day06/02.cpp)
